--- a/VRChat/42/1136042.html
+++ b/VRChat/42/1136042.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "spcSFHEIEq8tw372QxrybaKicEhQKEKDmSYQPmWXp9E="></script>
+    "9SJtXL4Am0MOyIUgIyz3TiH2nybDYYQlYcoaF2rYcFE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC想定ジェネリックアバター「かしうおくん」","description":"VRC想定ジェネリックアバター「かしうおくん」　紹介文\n製作者：餓死谷　独郎\n\n※以下の商品説明・利用規約をご確認の上、ご了承の方のみご購入ください\n\n【商品説明】\n\n主にVRChatでのGenericアバターとしての利用を想定しています。\n本モデルを最大限楽しむためにはDinamicBoneが必要です\n本モデルはVRCの仕様変更に対応する形でアップデートされる可能性があります、ご了承ください。\n\nポリゴン数：△1122\n\nメッシュ数：１\nテクスチャ数：0\nマテリアル数：2\nシェイプキー数：0\n\nAvatarPerformance：Excellent\nEye tracking：非対応\n\nスキニング済み\n\n\n【導入方法】\n\n1.unity 2017.4.15f1をダウンロードし、プロジェクトを作成\n2.VRCSDKを公式からダウンロードしインポート\n3.unitypackageをインポート\n4.Prefabファイルをシーンに追加。\nVRChatSDKよりShow Build Control Panelを起動しアップロード\n\n詳しい導入方法が分からない場合は下記製作者Twitterにご連絡ください。↓\nhttps://twitter.com/gasyadokuro10?lang=ja\n\n\n【利用規約】\n\n・本モデルを購入した時点で本利用規約に同意したものとします。\n\n・利用規約は予告なく変更される場合があり、常に最新のものが適用されます。\n\n・本モデルに関するデータ及び改変したデータが持つ著作権は制作者餓死谷　独郎に帰属します。\n\n・制作者、餓死谷　独郎は本データ使用によるいかなるトラブル、損失に一切責任を負いません。\n\n商業利用\n商業・非商用どちらも可能です。主にVRChatでの利用を想定していますがそのほかのゲーム製作、映像制作などのデジタルコンテンツにも利用可能です\n\n改変\n改変は許可します\n\nR-18、R-18Gコンテンツへの利用\n基本的に制限はありません\n\n※禁止事項※\n・本モデルとそれに関連したデータの再配布及び販売を禁止します、本商品に含まれるデータを改変したものを再配布、販売することも禁止します。\n\n・公序良俗に反する行為や目的、政治、宗教活動、他者に対する誹謗中傷目的での使用を禁止します。\n\nVRChat上で本モデル、改造モデルのアバターペデスタルの設置・利用を禁止します、またアバターコピーができる状態にして利用することを禁止します。\n\n\n制定日\n2019年5月05日\n\n\n更新履歴\n2019/5/05\n・販売開始\n\n\n","url":"https://booth.pm/ja/items/1136042","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/3f0adcc5-907c-4ee2-ab3c-73346f195428/i/1136042/9255c4a4-595f-4596-97c5-b215a7bdf1ad_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="spcSFHEIEq8tw372QxrybaKicEhQKEKDmSYQPmWXp9E="></script>
+    nonce="9SJtXL4Am0MOyIUgIyz3TiH2nybDYYQlYcoaF2rYcFE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -451,9 +451,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
