--- a/VRChat/64/1347964.html
+++ b/VRChat/64/1347964.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "hUvuMkOWztUj3B6P3GJZ1c6R82dTekj/CEP7pAOvsqg="></script>
+    "2yd5Op42KahIu8+lx96SqSBJj3EUuKVrLb/SZgIWQSg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"めぐちゃんのぬいぐるみ","description":"わたあめ子が、東雲めぐちゃんの3Dぬいぐるみを作ってみました！\n\nあめ子まーと初の二次創作商品です。\n\nこの作品は、Gugenkaさんの東雲めぐちゃん二次創作に対するガイドライン、GFGに基づいて制作されております。\nGFGについてはこちらを参照ください。\nhttps://gugenka.jp/common/img/original/gfg/gfg.pdf","url":"https://booth.pm/ja/items/1347964","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/a4a7842d-1a6a-4d2b-a80c-4c704fe5040b/i/1347964/5188eab9-4e51-4cff-a0f4-f4848e0e1ec7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hUvuMkOWztUj3B6P3GJZ1c6R82dTekj/CEP7pAOvsqg="></script>
+    nonce="2yd5Op42KahIu8+lx96SqSBJj3EUuKVrLb/SZgIWQSg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -437,9 +437,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
