--- a/VRChat/71/1346071.html
+++ b/VRChat/71/1346071.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "oRKoxym0cXzNUU3sq6+MdDCepr+dJ8WjoUgppgGBpVc="></script>
+    "ROs4aUkyUXIGUEnwSHEoqpKsUt7SrhertVsWOQNP36E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オーロラ【3Dモデル】","description":"【前提】本モデルは「アズールレーン」二次創作に関するガイドライン\nに沿って制作しています。\nhttps://www.azurlane.jp/news-item.html?i=1010\n\n【参考URL】\n↓以下のようなモデルになります。\nhttps://hub.vroid.com/characters/482937411978556544/models/6109505983491778161\n\n■仕様(specification)：\nポリゴン数(Polygones)：39293\n対応シェイプキー(ShapeKey)：\n・Neutral\n・A\n・I\n・U\n・E\n・O\n・Joy\n・Fun\n・Angry\n・Sorrow\n・Blink_L\n・Blink_R\n\n■利用規約\n・データ改変はガイドラインの範囲内で可能です。\n・VRChatアバターペデスタルはNGです。\n・ご使用、ご利用の報告、クレジット記載は任意です。\n（報告していただけたらすごく喜びます（＾＾））\n・使用によるトラブル等には一切責任を負いません。\n\n■禁止事項\n・再配布、転売は禁止です。\n・違法、公序良俗に違反する媒体への使用禁止\n\n[English]\n■Premise\n・This model is a guideline for \"Azur Lane\" secondary creation\nI am producing along.\n\n■ Terms of use\n・ Data modification is possible within the scope of the guidelines.\n・ VRChat avatar pedestal is NG.\n・ The use, report on use, credit entry is optional.\n(I am very pleased if you report it (^ ^))\n・I will not be responsible for troubles etc. by use at all.\n\n\n■ Prohibited items\n・ Redistribution and resale are prohibited.\n・ Prohibition of use on illegal, violating public order and morals\n\n","url":"https://booth.pm/ja/items/1346071","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/4644c3b8-7323-49ec-884d-8226954b89c6/i/1346071/24dcdd4b-ad7e-4824-bc1b-066c16710bc5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oRKoxym0cXzNUU3sq6+MdDCepr+dJ8WjoUgppgGBpVc="></script>
+    nonce="ROs4aUkyUXIGUEnwSHEoqpKsUt7SrhertVsWOQNP36E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -470,9 +470,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
