--- a/VRChat/78/1346078.html
+++ b/VRChat/78/1346078.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "jhxWn19A9PozOhfXbXpPgIfwlQ7gvrT3KGPHdj44JTs="></script>
+    "AZ0cxU8sG1MJTc31em/4TPntpqKgYgL+wgXDTL4PgHY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向け武器モデル「サジタリウス(弓)」","description":"新造した弓、矢用に簡易化された剣槍、発射パーティクルのセット。\n今回は追加で他のアセットを用意する必要はありません。\n\n2019/10/06\nパーティクルを別途配布している解説書に沿って構造変更。\n\nunity、VRChat向けのモデルデータです。\n\n以下、同梱物の全てまたは一部を「本データ」と省します。\n\n◆利用規約◆\n商用利用可、好きに使っていただいて構いませんが、利用にあたって以下のことは不許可とさせていただきます。\n\n販売されている本データをそのまま抜き出せる形での二次配布、転売。\n本データの著作権主張。\n個人や団体への誹謗中傷や政治的な利用を目的とした使用(使用した作品世界内での演出としてなら無論構いません)。\nその他公序良俗に反する行為や、他者を不快にさせる目的での利用は厳に慎んでください。\n\n\n◆免責◆\n本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。","url":"https://booth.pm/ja/items/1346078","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/f63271ef-1176-416b-8e02-e744195dd0d9/i/1346078/2f69c6bd-3854-438a-86cf-45a4d90580f2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jhxWn19A9PozOhfXbXpPgIfwlQ7gvrT3KGPHdj44JTs="></script>
+    nonce="AZ0cxU8sG1MJTc31em/4TPntpqKgYgL+wgXDTL4PgHY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -437,9 +437,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
