--- a/VRChat/52/1345152.html
+++ b/VRChat/52/1345152.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "5qCK+0eH2UjyqxGpRcsTZaFIC1JODE6KhhV6INdL0Fc="></script>
+    "4MTmdU7hZWwkRKYILPwXT4VHaZFL6Ai+8G+bZ9NeXno="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用アバター「椅子をワールド固定で設置したり背中に人を載せられるカラスアバター」【オリジナル3Dモデル】","description":"VRChatでの使用を想定したカラスのアバターです。\nハンドサインのロックンロールで右手の位置の空中に椅子を置けます。\nビクトリーで透明な椅子を空中に設置できます。\nこれを椅子判定の無い机や段差などに重ねて設置すれば、デスクトップ勢の人を座っているように見せることができます。\nハンドサインを解除すれば椅子を透明化して座っているユーザを手元に引き寄せることができるので、だっこして持ち運べます。\n設置する椅子の向きは右の手のひらに追従しますので、伏せて置いたり逆さまにして置いたりもできます。\nサムズアップで羽ばたくモーションに切り替わるので、プレイスペースムーバーを導入している環境なら立ち位置を空中にずらすことにより飛んでいるように見えます。\n羽ばたいているモーションのときは設置した椅子は一時的に消え、代わりに背中に座れる判定が現れるので、他の人に乗ってもらうことができます。\n背中に乗っている人を下ろすにはハンドサインを解除して羽ばたくモーションをやめれば下ろせます。\n同期の状態により、他の人を運ぶ時に遅延が発生する場合とそうでない場合があります。\n遅延がある場合や座る姿勢が特殊なアバターやフルトラの人を座らせた場合、座っている人の姿勢が大きく崩れることがよくあります。\n・改変可。カラスのアバターを他のアバターに差し替えても構いません。\n・ギミックを参考にして自作アバターに組み込んでもらっても構いません。\n・ペデスタル設置やpublic設定やアバタークローン許可設定や再配布等をしたい場合は私に相談してください。\n・フルトラ対応\n・本体は4000ポリゴン程度\n・リップシンク対応（シェイプキー名はMMD準拠）\n・瞬きやいくつかの表情差分あり\n・髪の毛や尻尾やネクタイを揺らすには別途ダイナミックボーンを購入してシーンを読み込む前にインポートしておいてください\n・UnityやVRChatのバージョン更新により動作しなくなる可能性もありますのでご了承ください。\n・また、特定のワールドでは正常に動作しない場合がありますのでご了承ください。\n・その他質問等があれば私のTwitterアカウントに連絡してください。\n\n修正 2019/05/15\nアニメーションのパス名を修正し忘れていたので修正しました。\n既にDLしていただいた1名の方、更新版をご希望でしたら、お手数ですが再DLまたは、連絡をお願いします。\n修正 2020/04/05\nVRChatのバージョンアップにより手の椅子の判定が使えなくなりました。使えるように直したファイルを再アップしますので差し替えてください。","url":"https://booth.pm/ja/items/1345152","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/9e8313ff-66da-4565-a550-3c52fa584cb9/i/1345152/7ca6325f-2553-4b0d-93dc-9049c1a1a3e3_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5qCK+0eH2UjyqxGpRcsTZaFIC1JODE6KhhV6INdL0Fc="></script>
+    nonce="4MTmdU7hZWwkRKYILPwXT4VHaZFL6Ai+8G+bZ9NeXno="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -446,9 +446,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
