--- a/VRChat/14/1321414.html
+++ b/VRChat/14/1321414.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "lG9jTsGUEskU5HWkPaC4BaQY/mxYhEfq7PFdIa/lJd4="></script>
+    "GTHL3Yqjn6AU9j5KAsFe6D5b9cc+drXjQJ2hXCo0vHI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"KEEP OUTテープParticle","description":"■概要\n　・VRChat向けのパーティクル\n　・KEEP OUTテープを張り巡らせます\n　・壁で反射します\n　・投銭版は「立入禁止」版が同梱されます\n\n■内容物\n　・Readmeテキスト\n　・UnityPackage(パーティクルシステム、サンプルのテクスチャ、マテリアルを同梱)\n\n■利用規約\n◇禁止事項\n　・未改変の本データの再配布。\n　　（VRC等で利用するためのアップロードはこれに該当しません。）\n　・犯罪行為への利用。（日本の法律に準拠します。）\n　・政治的、宗教的、過度に下品または卑猥な目的での利用。\n　・特定個人や団体への誹謗中傷を目的とした利用。\n◇許可事項\n　・禁止事項に抵触しない利用。\n　・本データを改変しての利用。\n　・VRChatでのPersonal・Publicそれぞれのアバターまたはワールドへの利用。\n　・本データを活用しての配信活動。\n　・動画配信やゲーム制作等の素材としての利用。（収益化、クレジット表記について制限いたしません。）\n\n◇免責事項\n　・本データを使用して発生したいかなる請求、問題、損害に対して、本データの製作者Koomは一切責任を負わないものとします。\n　　ご使用は自己責任でお願いします。\n　・本データは『UnityやVRchatでの利用』を想定して作成しています。\n　・本データとその関連データは改造の有無に関わらず著作権は製作者Koomに帰属するものとします。\n　・本利用規約は予告なく変更・改定されることがあります。\n\n■更新履歴\n　・2020/12/8(Tue)：Ver1.01\n　　　- フォルダ構成を変更。\n\n■製作者と連絡先\n　・製作者：Koom[クーム]\n　・Twitter：@KoomVRC1","url":"https://booth.pm/ja/items/1321414","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/26abfa4a-63b5-42b0-ab43-7f9be12ff8f7/i/1321414/8dcfb6d9-2a2e-49ae-aec4-2387d581508e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lG9jTsGUEskU5HWkPaC4BaQY/mxYhEfq7PFdIa/lJd4="></script>
+    nonce="GTHL3Yqjn6AU9j5KAsFe6D5b9cc+drXjQJ2hXCo0vHI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -519,9 +519,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
