--- a/VRChat/26/1343026.html
+++ b/VRChat/26/1343026.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8Wf8sKY7AMURyUua7+V0gO9VWGOLcBt9ovr1c4VEDJM="></script>
+    "ZTneN2aHDe759jFyLxdUmA8vFyZ9E8ve7QcOUfcS0e0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"黒猫ヘアピン","description":"僕が使っている黒猫ヘアピンになります！\nテクスチャは真っ黒のものを入れております！\n内容はfbxとユニティーパッケージ、真っ黒のテクスチャが入っております\n\n〇再配布、自作発言は不可です。その他改変等々ご自由にお使いください。\n　商用、非商用問わず改変、使用可能です！\n\n\n☆使い方\ncameraとlampの設定がそのままなので削除してください。\nサイズは大きく作ってあるのでスケールで大きさを調整して位置を合わせるといいです！\nヘアピン自体をそのままheadのアーマチュア以下に配置すると頭に追従します！\n\n","url":"https://booth.pm/ja/items/1343026","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/666e62ef-0c7a-4c8c-80d6-ec47e3e9587f/i/1343026/2f3b5cba-b078-41ed-b3ce-5f6f5fea5289_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8Wf8sKY7AMURyUua7+V0gO9VWGOLcBt9ovr1c4VEDJM="></script>
+    nonce="ZTneN2aHDe759jFyLxdUmA8vFyZ9E8ve7QcOUfcS0e0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -355,9 +355,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
