--- a/VRChat/10/1311710.html
+++ b/VRChat/10/1311710.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "481MiqJqnkWAymBLLV7/DVcFex5FWbH8ukiT6hVnvKE="></script>
+    "KWxKQX8Jz483yryP338E/mQSgPk8Jk3zpcaWFxkDc0o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"18式自動歩槍(Type18Assault rifle) Ver2.0","description":"今回はこの銃の大改修を行いました。\n\nこの銃はAKみたいな形をしてるがAKシリーズでは無くSKSカービン系統を元に某東アジアの共産国で開発された銃だ。\n\n中身などは作っていないです。そこはよろしくお願いします。\n\nー内容物ー\n1.18式.FBX\n2.18式.texture\n\nーポリゴン数ー\n18式 rifle.12,532\n\n18式 LMG.11,455\n\nー利用条約ー\n\n1.本データ\u0026改造データの再配布や再販売は禁止。\n\n2.改変は自由です。\n\n3.本データ\u0026改変データが再利用不可能に形で組み込んだゲームやアニメーションなどの配布や販売はOK。\n\n","url":"https://booth.pm/ja/items/1311710","offers":{"priceCurrency":"JPY","@type":"Offer","price":"250"},"image":"https://booth.pximg.net/c/620x620/a67fd8a1-35e5-43dd-a7be-d2ba2c56ab4c/i/1311710/400e945b-ef76-4034-a935-56375f9e949c_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="481MiqJqnkWAymBLLV7/DVcFex5FWbH8ukiT6hVnvKE="></script>
+    nonce="KWxKQX8Jz483yryP338E/mQSgPk8Jk3zpcaWFxkDc0o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -444,9 +444,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
